crates/parser/tests/cases/snapshots/cases__errors__for_no_in.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(for_no_in), functions::parse_stmt, \"for x {}\")"

---
error: failed to parse `for` statement
  ┌─ for_no_in:1:7
  │
1 │ for x {}
  │       ^ expected keyword `in`, found symbol `{`


